# gnomad-browser

./: .babelrc  .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  .gcloudignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.js  .pylintrc  .stylelintrc  .stylelintrc.js  .tool-versions  .yarnrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  babel.config.js  deployctl  jest.config.js  jest.config.ts  main.tf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  schema.js  scrape_log.py  scratch.js  server.js  setup.py  (+12 more)
data-pipeline/: .gitignore  AGENTS.md  CLAUDE.md  README.md  check.sh  pipelinectl  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  update-requirements.sh
data-pipeline/caids/: README.md  export_vcfs.py  get_caids.py  import_caids.py
data-pipeline/core/: config.py  enums.py
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_exome_transcript_consequences/mane_transcripts_path/: mane_select_transcripts.ht.schema
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_exome_transcript_consequences/output/: gnomad_v4_variants_annotated_2.ht.schema  gnomad_v4_variants_annotated_2.ht.schema.min
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_exome_transcript_consequences/variants_path/: gnomad_v4_exome_variants_annotated_1.ht.schema
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_exome_variants/exome_coverage_path/: gnomad_v4_exome_coverage.ht.schema
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_exome_variants/output/: gnomad_v4_exome_variants_annotated_1.ht.schema
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_exome_variants/variants_path/: gnomad_v4_exome_variants_base.ht.schema
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_transcript_consequences/output/: gnomad_v4_variants_annotated_2.ht.schema
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_transcript_consequences/transcripts_path/: transcripts_grch38_base.ht.schema
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_transcript_consequences/variants_path/: gnomad_v4_variants_annotated_1.ht.schema
data-pipeline/schemas/gnomad_v4_variants/annotate_gnomad_v4_variants/exome_coverage_path/: gnomad_v4_exome_coverage.ht.schema
data-pipeline/src/data_pipeline/: __init__.py  annotate_table.py  clinvar_variants.py  config.py  partitions.py  pipeline.py  position_fields.py
data-pipeline/src/data_pipeline/constraint/: exac_regional_missense_constraint.py  gnomad_v2_constraint.py
data-pipeline/src/data_pipeline/coverage/: coverage.py
data-pipeline/src/data_pipeline/data_types/: canonical_transcript.py  cnv_coverage.py  coverage.py  coverage_v4.py  gene.py  gtex_tissue_expression.py  locus.py  mane_select_transcript.py  pext.py  regional_missense_constraint.py  regional_missense_contraint.py  seeds.py  transcript.py
data-pipeline/src/data_pipeline/data_types/variant/: __init__.py  (+4 more)
data-pipeline/src/data_pipeline/datasets/: clinvar.py  gnomad_sv_v2.py  gnomad_sv_v3.py  gnomad_v4_lr.py  mitochondria.py
data-pipeline/src/data_pipeline/expression/: gtex_tissue_expression.py
data-pipeline/src/data_pipeline/gene_models/: gene_models.py  mane_select_transcripts.py  transcripts.py
data-pipeline/src/data_pipeline/helpers/: __init__.py  annotate_table.py  consequences.py  datasets_config.py  elasticsearch_export.py  freq_fields.py  logging.py  merge_overlapping_regions.py  timestamp.py  write_schemas.py  xposition.py
data-pipeline/src/data_pipeline/pipelines/: check_missingness.py  clinvar_grch37.py  clinvar_grch38.py  clinvar_parse_xml.py  clinvar_variants.py  coverage.py  exac.py  exac_coverage.py  exac_variants.py  export_to_elasticsearch.py  gene_models.py  gene_patches.py  genes.py  gnomad_structural_variants.py  gnomad_sv_v2.py  gnomad_sv_v3.py  gnomad_v2.py  gnomad_v2_coverage.py  gnomad_v2_lof_curation_results.py  gnomad_v2_variant_cooccurrence.py  gnomad_v2_variants.py  gnomad_v3.py  gnomad_v3_coverage.py  gnomad_v3_genomic_constraint_regions.py  gnomad_v3_local_ancestry.py  gnomad_v3_mitochondrial_coverage.py  gnomad_v3_mitochondrial_variants.py  gnomad_v3_short_tandem_repeats.py  gnomad_v3_variants.py  gnomad_v4_cnv_del_burden.py  gnomad_v4_cnv_dup_burden.py  gnomad_v4_cnv_track_percent_callable.py  gnomad_v4_cnvs.py  gnomad_v4_copy_number_variant_coverage.py  gnomad_v4_coverage.py  gnomad_v4_lof_curation_results.py  gnomad_v4_lr.py  gnomad_v4_lr_coverage.py  gnomad_v4_validation.py  gnomad_v4_variants.py  (+9 more)
data-pipeline/src/data_pipeline/variants/: annotate_transcript_consequences.py  exac_variants.py  gnomad_structural_variants.py  gnomad_v2_lof_curation.py  gnomad_v2_mnvs.py  gnomad_v2_variants.py  gnomad_v3_variants.py  rsids.py  variant_id.py
data-pipeline/src/pipelinectl/: __main__.py  config.py
data-pipeline/src/pipelinectl/subcommands/: cluster.py  config.py  run.py
data-pipeline/tests/pipeline/: test_config.py  test_pipeline.py
data-pipeline/tests/v4/: test_inputs.py
(+3122 files in other folders)
