[project]
name = "gnomad-browser-python"
version = "0.1.0"
description = "gnomAD browser python dependency management across data-pipeline and deployctl"
requires-python = "==3.9.17"
dependencies = [
  "elasticsearch~=7.17",
  "hail==0.2.127",
  "tqdm",
  "loguru",
  "attrs",
  "cattrs",
  "Jinja2==3.1.6",
  "setuptools<81",
]

[dependency-groups]
dev = [
  "ruff==0.15.18",
  "pytest",
  "pyright",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pyright]
include = [
  "data-pipeline/src/data_pipeline/pipeline.py",
  "data-pipeline/src/data_pipeline/config.py",
  "data-pipeline/src/data_pipeline/helpers/write_schemas.py",
  "data-pipeline/src/data_pipeline/helpers/logging.py",
  "data-pipeline/src/data_pipeline/pipelines/gnomad_v4_variants.py",
  "data-pipeline/src/data_pipeline/pipelines/gnomad_v4_coverage.py",
]
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"
pythonVersion = "3.9"
