[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = ["gnomAD team <gnomad@broadinstitute.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "7.17.9"
tqdm = "^4.66.3"
loguru = "^0.7.2"
attrs = "^23.1.0"
cattrs = "^23.1.2"

[tool.poetry.group.dev.dependencies]
hail = "^0.2.127"
pytest = "^7.4.2"
ipython = "^8.15.0"
ruff = "^0.0.290"
black = "^24.3.0"
pyright = "^1.1.327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pyright]
include = [
"src/data_pipeline/pipeline.py",
"src/data_pipeline/config.py",
"src/data_pipeline/helpers/write_schemas.py",
"src/data_pipeline/helpers/logging.py",
"src/data_pipeline/pipelines/gnomad_v4_variants.py",
"src/data_pipeline/pipelines/gnomad_v4_coverage.py",
# "src/data_pipeline/datasets/gnomad_v4",
"tests"
]
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"
pythonVersion = "3.9"
