[project]
name = "gnomad-data-pipeline"
version = "0.0.0"
description = "Hail data pipelines for the gnomAD browser"
requires-python = ">=3.9,<3.10"
dependencies = [
    "hail==0.2.127",
    "elasticsearch~=7.17",
    "tqdm",
    "loguru",
    "attrs",
    "cattrs",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff==0.15.17", # This should be kept in sync with the version in .pre-commit-config.yaml
    "pyright",
]

[tool.uv]
# data_pipeline is consumed via sys.path / zipped upload (see deployctl), not pip-installed.
package = false

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pyright]
include = [
"src/data_pipeline/pipeline.py",
"src/data_pipeline/config.py",
"src/data_pipeline/helpers/write_schemas.py",
"src/data_pipeline/helpers/logging.py",
"src/data_pipeline/pipelines/gnomad_v4_variants.py",
"src/data_pipeline/pipelines/gnomad_v4_coverage.py",
# "src/data_pipeline/datasets/gnomad_v4",
"tests"
]
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"
pythonVersion = "3.9"
