[project]
name = "data-pipeline"
version = "0.1.0"
description = "gnomAD browser data pipeline"
requires-python = "==3.9.17"
dependencies = [
  "elasticsearch~=7.17",
  "hail==0.2.127",
  "tqdm",
  "loguru",
  "attrs",
  "cattrs",
]

[dependency-groups]
dev = [
  "pytest",
  # Keep in sync with the version in ../requirements-dev.txt and ../.pre-commit-config.yaml
  "ruff==0.15.18",
  "pyright",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pyright]
include = [
"src/data_pipeline/pipeline.py",
"src/data_pipeline/config.py",
"src/data_pipeline/helpers/write_schemas.py",
"src/data_pipeline/helpers/logging.py",
"src/data_pipeline/pipelines/gnomad_v4_variants.py",
"src/data_pipeline/pipelines/gnomad_v4_coverage.py",
# "src/data_pipeline/datasets/gnomad_v4",
"tests"
]
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"
pythonVersion = "3.9"
